--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -60,32 +60,9 @@
           </a>
         </li>
         {% endif %}
-        <li class="nav-item">
-          <a href="{{ url_for('view_bins_page')}}" class="nav-link">
-            <svg
-              aria-hidden="true"
-              focusable="false"
-              data-prefix="fad"
-              data-icon="User Profile"
-              role="img"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 448 512"
-              class="svg-inline--fa fa-alien-monster fa-w-18 fa-9x"
-            >
-              <g class="fa-group">
-                <path
-                  fill="currentColor"
-                  d="M304 128a80 80 0 1 0 -160 0 80 80 0 1 0 160 0zM96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM49.3 464l349.5 0c-8.9-63.3-63.3-112-129-112l-91.4 0c-65.7 0-120.1 48.7-129 112zM0 482.3C0 383.8 79.8 304 178.3 304l91.4 0C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7L29.7 512C13.3 512 0 498.7 0 482.3z"
-                  class="fa-primary"
-                ></path>
-              </g>
-            </svg>
-            <span class="link-text">Find Bin Near Me</span>
-          </a>
-        </li>
         {% if current_user.is_authenticated %}
-        <!-- Link to About Page -->
-        <li class="nav-item">
+         <!-- Link to About Page -->
+         <li class="nav-item">
           <a href="{{ url_for('about') }}" class="nav-link">
             <svg
               aria-hidden="true"
@@ -108,6 +85,32 @@
             <span class="link-text">About</span>
           </a>
         </li>
+        <!-- Link to Bin Finder -->
+        </svg>
+        <li class="nav-item">
+          <a href="{{ url_for('view_bins_page')}}" class="nav-link">
+            <svg
+              aria-hidden="true"
+              focusable="false"
+              data-prefix="fad"
+              data-icon="User Profile"
+              role="img"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 576 512"
+              class="svg-inline--fa fa-alien-monster fa-w-18 fa-9x"
+            >
+              <g class="fa-group">
+                <path
+                  fill="currentColor"
+                  d="M408 120c0 54.6-73.1 151.9-105.2 192c-7.7 9.6-22 9.6-29.6 0C241.1 271.9 168 174.6 168 120C168 53.7 221.7 0 288 0s120 53.7 120 120zm8 80.4c3.5-6.9 6.7-13.8 9.6-20.6c.5-1.2 1-2.5 1.5-3.7l116-46.4C558.9 123.4 576 135 576 152l0 270.8c0 9.8-6 18.6-15.1 22.3L416 503l0-302.6zM137.6 138.3c2.4 14.1 7.2 28.3 12.8 41.5c2.9 6.8 6.1 13.7 9.6 20.6l0 251.4L32.9 502.7C17.1 509 0 497.4 0 480.4L0 209.6c0-9.8 6-18.6 15.1-22.3l122.6-49zM327.8 332c13.9-17.4 35.7-45.7 56.2-77l0 249.3L192 449.4 192 255c20.5 31.3 42.3 59.6 56.2 77c20.5 25.6 59.1 25.6 79.6 0zM288 152a40 40 0 1 0 0-80 40 40 0 1 0 0 80z"
+                  class="fa-primary"
+                ></path>
+              </g>
+            </svg>
+            <span class="link-text">BinFinder</span>
+          </a>
+        </li>
+       
         <!-- Link to AI -->
         <li class="nav-item">
           <a onclick="console.log('detect')" class="nav-link"> 
