remove padding and navbar to login and register pages

--- a/templates/login.html
+++ b/templates/login.html
@@ -9,8 +9,7 @@
     <title>Login</title>
 </head>
 <body>
-    {% include 'navbar.html' %}
-    <main>
+    <main style="padding-left: 0%;">
         <div class="banner">
             <h1>Logging into The SingProJet</h1>
             <h2>Back to recycle more?</h2>
