--- a/templates/register.html
+++ b/templates/register.html
@@ -8,8 +8,7 @@
     <title>Register</title>
 </head>
 <body>
-    {% include 'navbar.html' %}
-    <main>
+    <main style="padding-left: 0%;">
         <div class="banner">
             <h1>Registering to The SingProJet</h1>
             <h2>Welcome to the The SingProJet!</h2>
