--- a/templates/manage_bins.html
+++ b/templates/manage_bins.html
@@ -58,7 +58,13 @@
                         <td>{{ bin.bin_id }}</td>
                         <td>{{ bin.bin_type }}</td>
                         <td>{{ bin.bin_location }}</td>
-                        <td>{{bin.bin_full}}</td>
+                        <td>
+                            {% if bin.bin_full %}
+                                Not Available
+                            {% else %}
+                                Available
+                            {% endif %}
+                        </td>
                         <td>
                             <button class="modify-btn" onclick="toggleAllEditForms('{{ bin.bin_id }}')">Modify</button>
                         </td>
