--- a/templates/nearest_bins.html
+++ b/templates/nearest_bins.html
@@ -7,12 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet" />
+    <style>
+        .bin-list {
+            display: flex;
+            flex-direction: column;
+            gap: 10px; /* Optional: Adds space between items */
+        }
+
+        .bin-item {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: #f9f9f9;
+        }
+    </style>
 </head>
 <body>
     {% include 'navbar.html' %}
     <main>
+        <div class="banner">
+            <h1>BinFinder</h1>
+            <h2>Find the nearest bins to recycle of your waste!</h2>
+        </div>
+
         <div class="container">
-            <h1>Nearest Bins</h1>
 
             <button onclick="getLocation()" class="location-btn">Find Nearest Bins</button>
 
