--- a/templates/while_throwing.html
+++ b/templates/while_throwing.html
@@ -17,14 +17,7 @@
         <div class="container">
             
         </div>
-
         <div class="container">
-            <!--
-            <form action="{{ url_for('sffsdfasdfasjfhafoshflhaifakhdfanlksdfhai') }}">
-                <button type="submit">End Session</button>
-            </form>
-            -->
-
             <div class="container mt-5">
                 <div class="card">
                     <div class="card-header">
@@ -67,9 +60,9 @@
                 const endSessionBtn = document.getElementById('end-session-btn');
                 endSessionBtn.addEventListener('click', function() {
                     // Confirm the action
-                    if (!confirm('Are you sure you want to end the session?')) {
+                    /*if (!confirm('Are you sure you want to end the session?')) {
                         return;
-                    }
+                    }*/
     
                     // Prepare JSON data
                     const data = {
@@ -81,7 +74,6 @@
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
-                            
                         },
                         body: JSON.stringify(data),
                     })
