update to SPJ to EcoTrack

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,7 +7,7 @@
         <!-- Link to Home Page *only for Desktop* -->
         <li class="logo">
           <a href="{{ url_for('home') }}" class="nav-link">
-            <span class="link-text logo-text">The SPJ</span>
+            <span class="link-text logo-text">EcoTrack</span>
             <svg
               aria-hidden="true"
               focusable="false"
