--- a/templates/register.html
+++ b/templates/register.html
@@ -10,8 +10,8 @@
 <body>
     <main style="padding-left: 0%;">
         <div class="banner">
-            <h1>Registering to The SingProJet</h1>
-            <h2>Welcome to the The SingProJet!</h2>
+            <h1>Registering to EcoTrack</h1>
+            <h2>Welcome to EcoTrack!</h2>
         </div>
         <div class="container">    
             <form method="POST" action="">
