--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
 <body>
     <main style="padding-left: 0%;">
         <div class="banner">
-            <h1>Logging into The SingProJet</h1>
+            <h1>Logging into EcoTrack</h1>
             <h2>Back to recycle more?</h2>
         </div>
         <div class="container"> 
