upadted after throwing

--- a/templates/after_throwing.html
+++ b/templates/after_throwing.html
@@ -16,8 +16,8 @@
         </div>
 
         <div class="container">
-            <h3>Session Summary on {{ date }}</h3>
-            <h4>You have thrown {{ count }} items in the {{ bin_type }} Bin in {{ location }} on {{ time }}.</h4>
+            <h4>You have thrown {{ count }} items. Keep it up!</h4>
+
             <h3>Thank you for your contribution!</h3>
         </div>
 
