--- a/templates/detect_result.html
+++ b/templates/detect_result.html
@@ -10,11 +10,12 @@
 <body>
     {% include 'navbar.html' %}
     <main>
-        <div class="container">
-            <h1>Garbage Classificaltion</h1>
+        <div class="banner">
+            <h1>Garbage Classifier</h1>
             <h2>AI says this is a {{ result[0].label }}!</h2>
         </div>
         <div class="container">
+            <h3>More Data</h3>
             <table class="table-borderless">
                 <thead class="table-dark">
                     <tr>
